Bug 508544 - Setup of new resource: do not auto-fill display name for manual setup
Summary: Setup of new resource: do not auto-fill display name for manual setup
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 6.4.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-21 00:29 UTC by Frank Steinmetzger
Modified: 2025-08-30 14:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2025-08-21 00:29:55 UTC
SUMMARY
I just had to set up a new DAV calendar resource and discovered a bug in the process (#508543). But that bug only occurred to me because of the following behaviour, which IMHO is wrong.

I noticed that my new resource, which I set up using the manual setup, is called „Citadel“. I didn’t give it that name, but the word rang a bell. So I checked and confirmed:

STEPS TO REPRODUCE
1. Open the dialog to add a new DAV Groupware resource
2. Opt to set it up manually

OBSERVED RESULT
The display name is pre-filled with the type of resource that was last selected in the Server type dropdown. If it is pre-filled, one tends to overlook it, which causes the resource to get a wrong name, so it needs a correction later.

EXPECTED RESULT
I think it is better to leave the name field empty. The dialog cannot be submitted with an empty name field, so the user is reminded to fill it out.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Comment 1 Bug Janitor Service 2025-08-29 15:58:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/266
Comment 2 Allen Winter 2025-08-30 14:27:30 UTC
Git commit 06f116b19385357d9c33e408ee04acf96dc9d3cd by Allen Winter.
Committed on 29/08/2025 at 15:57.
Pushed by winterz into branch 'master'.

DAV config: don't auto-fill display name for manual setup

If manual configutation is selected, the user must enter the
display name themselves by-hand.  The OK button is disabled
until a display name is entered.

M  +7    -4    resources/dav/resource/configwidget.cpp
M  +2    -2    resources/dav/resource/setupwizard.cpp
M  +1    -1    resources/dav/resource/setupwizard.h

https://invent.kde.org/pim/kdepim-runtime/-/commit/06f116b19385357d9c33e408ee04acf96dc9d3cd
Comment 3 Allen Winter 2025-08-30 14:27:52 UTC
Git commit 39b248bf6e64ec456a9b260f2ecb974387452474 by Allen Winter.
Committed on 30/08/2025 at 14:27.
Pushed by winterz into branch 'release/25.08'.

DAV config: don't auto-fill display name for manual setup

If manual configutation is selected, the user must enter the
display name themselves by-hand.  The OK button is disabled
until a display name is entered.


(cherry picked from commit 06f116b19385357d9c33e408ee04acf96dc9d3cd)

Co-authored-by: Allen Winter <winter@kde.org>

M  +7    -4    resources/dav/resource/configwidget.cpp
M  +2    -2    resources/dav/resource/setupwizard.cpp
M  +1    -1    resources/dav/resource/setupwizard.h

https://invent.kde.org/pim/kdepim-runtime/-/commit/39b248bf6e64ec456a9b260f2ecb974387452474