DAV config: don't auto-fill display name for manual setup

If manual configutation is selected, the user must enter the
display name themselves by-hand.  The OK button is disabled
until a display name is entered.

BUG: 508544